1999-10-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/windowlist.c (do_windowList): reset nogeometrywithinfo when
	using geometry or nogeometry

01999-10-15  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/windowlist.c (do_windowList): applied

	* fvwm/builtins.c (ReadDecorFace): terminate 'style' string

1999-10-14  Brad Giaccio  <bgiaccio@psrw.com>

	* fvwm/builtins.c (HandleColorset):
	(SetDefaultColors):
	(ApplyDefaultFontAndColors):
	* fvwm/add_window.c (AddWindow):
	* fvwm/fvwm.c (main):
	(InitVariables):
	* fvwm/icons.c (CreateIconWindow):
	* fvwm/screen.h:
	* fvwm/fvmw2.1:
	added DefaultColors Colorset <n> command

1999-10-14  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (handle_window_style_change): handle 'StickyIcon' and
	'SlipperyIcon' style changes

	* fvwm/session.c (SaveWindowStates):
	(matchWin): fixed several session management bugs:
	SM tried to remember states of modules (which is impossible since the
	modules are killed and get new windows over a restart)
	SM simply matched by window id over a restart (which fails for the
	same reason)

	* fvwm/fvwm.h (FvwmWindow): removed unused member 'style'

	* fvwm/events.c:
	* fvwm/style.c (handle_window_style_change):
	update static window styles immediately

	* fvwm/gnome.c (GNOME_GetStyle):
	* fvwm/style.c (ProcessNewStyle):
	* fvwm/fvwm.h:
 	common window flags divided into dynamic and static part

	* fvwm/move_resize.c (moveLoop): prevent configure notify events if
	the position didn't change

1999-10-13  Hippo

	* fvwm/fvwm.c: fixed some X errors with multiheaded displays.

1999-10-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/module_interface.c (KillModule): removed unused argument 'place'

1999-10-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/XError.c (PrintXErrorAndCoredump): don't use X call in error
	handler

1999-10-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (reset_style_changes):
	(handle_style_changes):
	* fvwm/events.c (My_XNextEvent):